@@ -157,11 +157,11 @@
       </p>
 
       <ul>
-        <li>Used in at least <strong>45</strong>
+        <li>Used in at least 45
             <a href="countries.html">countries</a>
-            in <b>all 7 continents <i>(including Antarctica!)</i></b>
+            in all 7 continents <i>(including Antarctica!)</i>
         <li>
-          Supports 30 <a href="languages.html">programming languages</a>
+          Supports 33 <a href="languages.html">programming languages</a>
         </li>
         <li>Featured in the book,
           <a href="http://www.oreilly.com/catalog/vi6/chapter/ch08.html#ch08_05.htm">
