@@ -20,7 +20,9 @@ Languages Supported by Exuberant Ctags:
   <li>Eiffel</li>
   <li>Erlang</li>
   <li>Fortran</li>
+  <li>HTML</li>
   <li>Java</li>
+  <li>JavaScript</li>
   <li>Lisp</li>
   <li>Lua</li>
   <li>Make</li>
